fixed overflow height

--- a/src/App.scss
+++ b/src/App.scss
@@ -3,7 +3,7 @@
 .App {
   position: relative;
   width: 100%;
-  min-height: 100%;
+  min-height: 100vh;
 }
 
 .overlay {
